--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".RecipePagerActivity"
+            android:label="@string/title_activity_recipe_pager"
+            android:theme="@style/AppTheme.NoActionBar" />
     </application>
 
 </manifest>
