--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,9 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+            <meta-data
+            android:name="android.app.searchable"
+            android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name=".RecipeListActivity"
