--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,9 +30,10 @@
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
+
             <meta-data
-            android:name="android.app.searchable"
-            android:resource="@xml/searchable" />
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
 
         <!-- RECIPE LIST ACTIVITY -->
@@ -52,13 +53,12 @@
             android:resource="@array/preloaded_fonts" />
 
         <!-- RECIPE DETAILS ACTIVITY -->
-        <activity android:name=".RecipeDetailsActivity"/>
+        <activity android:name=".RecipeDetailsActivity" />
 
         <!-- FAVORITE LIST ACTIVITY -->
         <activity
             android:name=".FavoriteListActivity"
             android:parentActivityName=".MainActivity">
-
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".MainActivity" />
@@ -68,6 +68,7 @@
             android:name="android.app.default_searchable"
             android:value=".SearchActivity" />
 
+        <activity android:name=".CheckboxFilter"></activity>
     </application>
 
 </manifest>
